# be-content-transform-py

./: .editorconfig  README.md  pyproject.toml
src/contra/: __init__.py  __main__.py  cli.py
src/contra/adapters/driven/: README.md
src/contra/adapters/driving/: README.md
src/contra/domain/app/: README.md
src/contra/domain/model/: README.md
src/contra/domain/ports/driven/: README.md
src/contra/domain/ports/driving/: README.md
tests/: test_cli.py
tests/adapters/driven/: README.md
tests/adapters/driving/: README.md
tests/domain/app/: README.md
tests/domain/model/: README.md
tests/domain/ports/driven/: README.md
tests/domain/ports/driving/: README.md
